...
			selected = selectedType == BookNoteType.NOTE,
			onClick = { onTypeSelected(BookNoteType.NOTE) }
		)

		NoteTypeChip(
			modifier = Modifier.testTag(AddEditNote.TYPE_QUOTE),
			text = "Quote",
			selected = selectedType == BookNoteType.QUOTE,
			onClick = { onTypeSelected(BookNoteType.QUOTE) }
		)
	}
}

...
