...
		},
		confirmButton = {
			TextButton(
				onClick = onConfirm
			) {
				Text(
					text = "Delete",
					color = MaterialTheme.colorScheme.error
				)
			}
		},
		dismissButton = {
			TextButton(
				onClick = onDismiss
			) {
				Text("Cancel")
			}
		},
		containerColor = ReadingTrackerColors.card
	)
}

...
