appId: com.pguillen.readingtracker
---
- launchApp
- openLink:
    link:  readingtracker://debug/seed/multiple-books
- assertVisible:
    id: "library_book_card"
    index: 2
- tapOn:
    id: "library_search_field"
    point: 90%,50%
- inputText: "1"
- assertVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Maestro Title 1"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: Maestro Title 2"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Maestro Title 3"
- eraseText
- tapOn:
    id: "library_search_field"
    point: 90%,50%
- inputText: "2"
- assertVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Maestro Title 2"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Maestro Title 1"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Maestro Title 3"
- eraseText
- tapOn:
    id: "library_search_field"
    point: 90%,50%
- inputText: "3"
- assertVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Maestro Title 3"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Maestro Title 1"
- assertNotVisible:
    id: "library_book_card"
    containsDescendants:
      - text: "Maestro Title 2"