appId: com.pguillen.readingtracker
---
- launchApp
- openLink:
    link:  readingtracker://debug/seed/empty
- tapOn:
    id: "library_add_book_fab"
- tapOn: "Title"
- inputText: "Harry Potter"
- tapOn: "Author"
- inputText: "J.K.Rowling"
- tapOn: "Total pages"
- inputText: "300"
- hideKeyboard
- tapOn: "Save book"
- assertVisible:
    id: "library_book_card"
    index: 0
    containsDescendants:
      - text: "Harry Potter"
      - text: 'J\.K\.Rowling'