appId: com.pguillen.readingtracker
---
- launchApp
- openLink:
    link:  readingtracker://debug/seed/single-book
- extendedWaitUntil:
    visible:
      id: "library_book_card"
    timeout: 30000
- tapOn:
    id: "library_book_card"
    index: 0
- tapOn:
    id: "book_detail_add_note_button"
- tapOn:
    id: "add_edit_note_type_quote"
- tapOn:
    id: "add_edit_note_content_field"
- inputText: "New quote"
- hideKeyboard
- tapOn:
    id: "add_edit_note_page_field"
- inputText: "22"
- hideKeyboard
- tapOn:
    id: "add_edit_note_save_button"
- assertVisible:
    id: "book_detail_note_row"
    containsDescendants: 
        - text: "Quote"
        - text: "New quote"
        - text: "Page 22"
