appId: com.pguillen.readingtracker
---
- launchApp
- openLink:
    link:  readingtracker://debug/seed/single-book
- extendedWaitUntil:
    visible:
      id: "library_book_card"
    timeout: 30000
- tapOn:
    id: "library_book_card"
    index: 0
- tapOn:
    id: "book_detail_add_session_button"
- tapOn:
    id: "add_edit_session_end_page_field"
- inputText: "20"
- hideKeyboard
- tapOn:
    id: "add_edit_session_save_button"
- assertVisible:
    id: "book_detail_session_row"
    containsDescendants: 
        - text: "Pages 0 - 20"

