appId: com.pguillen.readingtracker
---
- launchApp
- openLink:
    link:  readingtracker://debug/seed/single-book
- extendedWaitUntil:
    visible:
      id: "library_book_card"
    timeout: 30000
- tapOn:
    id: "library_book_card"
    index: 0
- tapOn:
    id: "book_detail_delete_button"
- tapOn: "Delete"
- assertNotVisible:
    id: "library_book_card"
- assertVisible:
    id: "library_no_books_found"